--- a/css/styles.css
+++ b/css/styles.css
@@ -2875,7 +2875,9 @@ textarea.form-control-lg {
   border-bottom-right-radius: 0;
 }
 .input-group
-  > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+  > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(
+    .valid-feedback
+  ):not(.invalid-tooltip):not(.invalid-feedback) {
   margin-left: -0.125rem;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -11887,4 +11889,48 @@ html {
 
 .text-justify {
   text-align: justify;
+}
+
+.skills {
+  display: grid;
+  place-items: center;
+  align-items: flex-start;
+}
+@media screen and (min-width: 768px) {
+  .skills {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.skills__title {
+  margin-bottom: 30px;
+}
+.skills__front-end {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 700px;
+  margin-bottom: 30px;
+}
+.skills__back-end {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 500px;
+}
+
+.front-end__skill--javascript {
+  fill: white;
+}
+.front-end__skill:hover {
+  scale: 120%;
+}
+
+.back-end__skill:hover {
+  scale: 125%;
+}
+.back-end__skill--sql {
+  width: 80px;
+  height: 60px;
 }
